src/main/java/com/example/usedTrade/error/dto/ErrorDto.java
package com.example.usedTrade.error.dto;

public class ErrorDto {

}
